--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2"
