--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.22.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "dompurify": "^3.2.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
