--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^11.0.2"
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
